@@ -1470,9 +1470,11 @@ bxxb ccxxxxcc</programlisting>
 			</term>
 			<listitem>
 			    <para>
-				Returns the value of variable
-				<option><replaceable>varname</replaceable></option> as a
-				list, if there are multiple values.
+                    Returns the value of variable
+                    <option><replaceable>varname</replaceable></option> as a list, 
+                    one list element per reference. Radiobuttons or multiple 
+                    selection listboxes are suited widgets which may 
+                    return list data.
 			    </para>
 			</listitem>
 		    </varlistentry>
