@@ -13,7 +13,9 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
+#
+# $Id$
+#
 
 package require Itcl
 
@@ -25,23 +27,23 @@ package provide form 1.0
 ::itcl::class form {
 
     constructor {args} {
-	# set the form method to be a post and the action to be
-	# a refetching of the current page
-	set arguments(method) post
-	set arguments(action) [env DOCUMENT_URI]
+        # set the form method to be a post and the action to be
+        # a refetching of the current page
+        set arguments(method) post
+        set arguments(action) [env DOCUMENT_URI]
 
-	# use $this for the type for form-global stuff like form arguments
-	import_data form $this arguments $args
+        # use $this for the type for form-global stuff like form arguments
+        import_data form $this arguments $args
 
-	if {[info exists arguments(defaults)]} {
-	    # make the public variable contain the name of the array
-	    # we are sucking default values out of
-	    set defaults $arguments(defaults)
+        if {[info exists arguments(defaults)]} {
+            # make the public variable contain the name of the array
+            # we are sucking default values out of
+            set defaults $arguments(defaults)
 
-	    upvar 1 $arguments(defaults) defaults
-	    array set DefaultValues [array get defaults]
-	    unset arguments(defaults)
-	}
+            upvar 1 $arguments(defaults) callerDefaults
+            array set DefaultValues [array get callerDefaults]
+            unset arguments(defaults)
+        }
     }
 
     destructor {
@@ -49,7 +51,7 @@ package provide form 1.0
     }
 
     method destroy {} {
-	::itcl::delete object $this
+        ::itcl::delete object $this
     }
 
     #
@@ -59,53 +61,53 @@ package provide form 1.0
     # key-value pairs in the named array
     #
     protected method import_data {type name arrayName list} {
-	upvar 1 $arrayName data
+        upvar 1 $arrayName data
 
-	#
-	# If there are elements in the defaultArgs array for the
-	# specified type, combine them with the list of key-value
-	# pairs, putting the DefaultArgs values first so the
-	# key-value pairs from list can possibly override them.
-	#
-	if {[info exists DefaultArgs($type)]} {
-	    set list [concat $DefaultArgs($type) $list]
-	}
+        #
+        # If there are elements in the defaultArgs array for the
+        # specified type, combine them with the list of key-value
+        # pairs, putting the DefaultArgs values first so the
+        # key-value pairs from list can possibly override them.
+        #
+        if {[info exists DefaultArgs($type)]} {
+            set list [concat $DefaultArgs($type) $list]
+        }
 
-	#
-	# if there is a default value for the name stored in the
-	# DefaultValues array in this class, set the value
-	# element of the array the caller named to contain that
-	# value
-	#
-	if {[info exists DefaultValues($name)]} {
-	    set data(value) $DefaultValues($name)
-	}
+        #
+        # if there is a default value for the name stored in the
+        # DefaultValues array in this class, set the value
+        # element of the array the caller named to contain that
+        # value
+        #
+        if {[info exists DefaultValues($name)]} {
+            set data(value) $DefaultValues($name)
+        }
 
-	#
-	# if we don't have an even number of key-value pairs,
-	# that just ain't right
-	#
-	if {[expr [llength $list] % 2]} {
-	    return -code error "Unmatched key-value pairs"
-	}
+        #
+        # if we don't have an even number of key-value pairs,
+        # that just ain't right
+        #
+        if {[llength $list] % 2} {
+            return -code error "Unmatched key-value pairs"
+        }
 
-	#
-	# for each key-value pair in the list, strip the first
-	# dash character from the key part and map it to lower
-	# case, then use that as the key for the passed-in
-	# array and store the corresonding value in there
-	#
-	# we also prep and return the list of key-value pairs, normalized
-	# with the lowercase thing
-	#
-	set return ""
-	foreach {var val} $list {
-	    set var [string range [string tolower $var] 1 end]
-	    set data($var) $val
-	    if {($var == "values") || ($var == "labels")} { continue }
-	    lappend return -$var $val
-	}
-	return $return
+        #
+        # for each key-value pair in the list, strip the first
+        # dash character from the key part and map it to lower
+        # case, then use that as the key for the passed-in
+        # array and store the corresonding value in there
+        #
+        # we also prep and return the list of key-value pairs, normalized
+        # with the lowercase thing
+        #
+        set return ""
+        foreach {var val} $list {
+            set var [string range [string tolower $var] 1 end]
+            set data($var) $val
+            if {($var == "values") || ($var == "labels")} { continue }
+            lappend return -$var $val
+        }
+        return $return
     }
 
     #
@@ -114,12 +116,12 @@ package provide form 1.0
     # array
     #
     protected method argstring {arrayName} {
-	upvar 1 $arrayName data
-	set string ""
-	foreach arg [lsort [array names data]] {
-	    append string " $arg=\"$data($arg)\""
-	}
-	return $string
+        upvar 1 $arrayName data
+        set string ""
+        foreach arg [lsort [array names data]] {
+            append string " $arg=\"$data($arg)\""
+        }
+        return $string
     }
 
     #
@@ -148,19 +150,19 @@ package provide form 1.0
     #
     method default_args {type args} {
 
-	# if only one argument was specified
-	if {[lempty $args]} {
-	    if {![info exists DefaultArgs($type)]} { return }
-	    return $DefaultArgs($type)
-	}
+        # if only one argument was specified
+        if {[lempty $args]} {
+            if {![info exists DefaultArgs($type)]} { return }
+            return $DefaultArgs($type)
+        }
 
-	# make sure we have an even number of key-value pairs
-	if {[expr [llength $args] % 2]} {
-	    return -code error "Unmatched key-value pairs"
-	}
+        # make sure we have an even number of key-value pairs
+        if {[llength $args] % 2} {
+            return -code error "Unmatched key-value pairs"
+        }
 
-	# set the DefaultArgs for the specified type
-	return [set DefaultArgs($type) $args]
+        # set the DefaultArgs for the specified type
+        return [set DefaultArgs($type) $args]
     }
 
     #
@@ -168,17 +170,17 @@ package provide form 1.0
     #
     method start {{args ""}} {
         if {![lempty $args]} {
-	    # replicated in constructor
-	    import_data form $this arguments $args
-	}
-	html "<form [argstring arguments]>"
+            # replicated in constructor
+            import_data form $this arguments $args
+        }
+        html "<form [argstring arguments]>"
     }
 
     #
     # end - generate the </form>
     #
     method end {} {
-	html "</form>"
+        html "</form>"
     }
 
     #
@@ -188,41 +190,41 @@ package provide form 1.0
     #
     method field {type name args} {
 
-	# import any default key-value pairs, then any specified in this
-	# field declaration
-	import_data $type $name data $args
+        # import any default key-value pairs, then any specified in this
+        # field declaration
+        import_data $type $name data $args
 
-	switch -- $type {
-	    "radio" -
-	    "checkbox" {
+        switch -- $type {
+            "radio" -
+            "checkbox" {
 
-		# if there's a label then prepare to output it.
-		if {[info exists data(label)]} {
-			# if there's no id defined, generate something unique so we can reference it.
-			if {![info exists data(id)]} {
-				set data(id) "autogen_[::uuid::uuid generate]"
-			}
-			set label "<label for=\"$data(id)\">$data(label)</label>"
-		}
+            # if there's a label then prepare to output it.
+            if {[info exists data(label)]} {
+                # if there's no id defined, generate something unique so we can reference it.
+                if {![info exists data(id)]} {
+                    set data(id) "autogen_[::uuid::uuid generate]"
+                }
+                set label "<label for=\"$data(id)\">$data(label)</label>"
+            }
 
-		# ...and if the is a default value for this field
-		# and it matches the value we have for it, make
-		# the field show up as selected (checked)
-		if {[info exists DefaultValues($name)] && [info exists data(value)]} {
-		    if {[lsearch $DefaultValues($name) $data(value)] >= 0} {
-			set data(checked) "checked"
-		    }
-		}
-	    }
-	}
-	# generate the field definition
-	set string "<input type=\"$type\" name=\"$name\" [argstring data] />"
-	if {[info exists label]} {
-		append string $label
-	}
+            # ...and if the is a default value for this field
+            # and it matches the value we have for it, make
+            # the field show up as selected (checked)
+            if {[info exists DefaultValues($name)] && [info exists data(value)]} {
+                if {[lsearch $DefaultValues($name) $data(value)] >= 0} {
+                set data(checked) "checked"
+                }
+            }
+            }
+        }
+        # generate the field definition
+        set string "<input type=\"$type\" name=\"$name\" [argstring data] />"
+        if {[info exists label]} {
+            append string $label
+        }
 
-	# ...and emit it
-    html $string
+        # ...and emit it
+        html $string
 
     }
 
@@ -230,63 +232,63 @@ package provide form 1.0
     # text -- emit an HTML "text" field
     #
     method text {name args} {
-	eval field text $name $args
+        eval field text $name $args
     }
 
     #
     # password -- emit an HTML "password" field
     #
     method password {name args} {
-	eval field password $name $args
+        eval field password $name $args
     }
 
     #
     # hidden -- emit an HTML "hidden" field
     #
     method hidden {name args} {
-	eval field hidden $name $args
+        eval field hidden $name $args
     }
 
     #
     # submit -- emit an HTML "submit" field
     #
     method submit {name args} {
-	eval field submit $name $args
+        eval field submit $name $args
     }
 
     #
     # button -- emit an HTML "button" field
     #
     method button {name args} {
-	eval field button $name $args
+        eval field button $name $args
     }
 
     #
     # reset -- emit an HTML "reset" button
     #
     method reset {name args} {
-	eval field reset $name $args
+        eval field reset $name $args
     }
 
     #
     #  image -- emit an HTML image field
     #
     method image {name args} {
-	eval field image $name $args
+        eval field image $name $args
     }
 
     #
     # checkbox -- emit an HTML "checkbox" form field
     #
     method checkbox {name args} {
-	eval field checkbox $name $args
+        eval field checkbox $name $args
     }
 
     #
     # radio -- emit an HTML "radiobutton" form field
     #
     method radio {name args} {
-	eval field radio $name $args
+        eval field radio $name $args
     }
 
     #
@@ -391,18 +393,18 @@ package provide form 1.0
     # radiobuttons -- 
     #
     method radiobuttons {name args} {
-	set data(values) [list]
-	set data(labels) [list]
+        set data(values) [list]
+        set data(labels) [list]
 
-	set list [import_data radiobuttons $name data $args]
+        set list [import_data radiobuttons $name data $args]
 
-	if {[lempty $data(labels)]} { 
-	    set data(labels) $data(values) 
-	}
+        if {[lempty $data(labels)]} { 
+            set data(labels) $data(values) 
+        }
 
-	foreach label $data(labels) value $data(values) {
-	    eval radio $name $list -label $label -value $value
-	}
+        foreach label $data(labels) value $data(values) {
+            eval radio $name $list -label $label -value $value
+        }
     }
 
     #
@@ -414,67 +416,67 @@ package provide form 1.0
     # it'll select it too.
     #
     method select {name args} {
-	# start with empty values and labels so they'll exist even if not set
-	set data(values) [list]
-	set data(labels) [list]
+        # start with empty values and labels so they'll exist even if not set
+        set data(values) [list]
+        set data(labels) [list]
 
-	# import any default data and key-value pairs from the method args
-	import_data select $name data $args
+        # import any default data and key-value pairs from the method args
+        import_data select $name data $args
 
-	# pull the values and labels into scalar variables and remove them
-	# from the data array
-	set values $data(values)
-	set labels $data(labels)
-	unset data(values) data(labels)
+        # pull the values and labels into scalar variables and remove them
+        # from the data array
+        set values $data(values)
+        set labels $data(labels)
+        unset data(values) data(labels)
 
-	# get the default value, use an empty string if there isn't one
-	set default ""
-	if {[info exists DefaultValues($name)]} {
-	    set default $DefaultValues($name)
-	}
+        # get the default value, use an empty string if there isn't one
+        set default ""
+        if {[info exists DefaultValues($name)]} {
+            set default $DefaultValues($name)
+        }
 
-	# if there is a value set in the value field of the data array,
-	# use that instead (that way if we're putting up a form with
-	# data already, the data'll show up)
-	if {[info exists data(value)]} {
-	    set default $data(value)
-	    unset data(value)
-	}
+        # if there is a value set in the value field of the data array,
+        # use that instead (that way if we're putting up a form with
+        # data already, the data'll show up)
+        if {[info exists data(value)]} {
+            set default $data(value)
+            unset data(value)
+        }
 
-	#
-	# if there are no separate labels defined, use the list of
-	# values for the labels
-	#
-	if {[lempty $labels]} { 
-	    set labels $values 
-	}
+        #
+        # if there are no separate labels defined, use the list of
+        # values for the labels
+        #
+        if {[lempty $labels]} { 
+            set labels $values 
+        }
 
-	# emit the selector
-	html "<select name=\"$name\" [argstring data]>"
+        # emit the selector
+        html "<select name=\"$name\" [argstring data]>"
 
-	# emit each label-value pair
-	foreach label $labels value $values {
-	    if {$value == $default} {
-		set string "<option value=\"$value\" selected=\"selected\">"
-	    } else {
-		set string "<option value=\"$value\">"
-	    }
-	    html "$string$label</option>"
-	}
-	html "</select>"
+        # emit each label-value pair
+        foreach label $labels value $values {
+            if {$value == $default} {
+            set string "<option value=\"$value\" selected=\"selected\">"
+            } else {
+            set string "<option value=\"$value\">"
+            }
+            html "$string$label</option>"
+        }
+        html "</select>"
     }
 
     #
     # textarea -- emit an HTML "textarea" form field
     #
     method textarea {name args} {
-	import_data textarea $name data $args
-	set value ""
-	if {[info exists data(value)]} {
-	    set value $data(value)
-	    unset data(value)
-	}
-	html "<textarea name=\"$name\" [argstring data]>$value</textarea>"
+        import_data textarea $name data $args
+        set value ""
+        if {[info exists data(value)]} {
+            set value $data(value)
+            unset data(value)
+        }
+        html "<textarea name=\"$name\" [argstring data]>$value</textarea>"
     }
 
     #
@@ -482,8 +484,8 @@ package provide form 1.0
     # the key-value pairs out of and copy them into DefaultValues
     #
     public variable defaults "" {
-	upvar 1 $defaults array
-	array set DefaultValues [array get array]
+        upvar 1 $defaults array
+        array set DefaultValues [array get array]
     }
 
     private variable DefaultValues
